# api_docs.yml
@@ -2031,7 +2031,45 @@ paths:
                 500:
                     description: "Internal Server Error"
 
+        patch:
+            tags:
+                - projects
+            consumes:
+                - application/json
+            description: "Update a user role in a project, role can be either 'admin' or 'member'"
+            parameters:
+                - in: header
+                  name: Authorization
+                  required: true
+                  type: string
 
+                - in: path
+                  name: project_id
+                  required: true
+                  type: string
+
+                - in: body
+                  name: projectUsers
+                  schema:
+                    type: object
+                    required:
+                        - email
+                        - role
+                    properties:
+                        email:
+                            type: string
+                        role:
+                            type: string
+            produces:
+                - application/json
+            responses:
+                201:
+                    description: "Success"
+                400:
+                    description: "Bad request"
+                500:
+                    description: "Internal Server Error"
+        
         delete:
             tags:
                 - projects
@@ -2068,6 +2106,43 @@ paths:
                 500:
                     description: "Internal Server Error"
 
+    "/projects/{project_id}/users/transfer":
+        post:
+            tags:
+                - projects
+            consumes:
+                - application/json
+            description: "Transfer project ownership to another user"
+            parameters:
+                - in: header
+                  name: Authorization
+                  required: true
+                  type: string
+
+                - in: path
+                  name: project_id
+                  required: true
+                  type: string
+
+                - in: body
+                  name: projectUsers
+                  schema:
+                    type: object
+                    required:
+                        - email
+                    properties:
+                        email:
+                            type: string
+            produces:
+                - application/json
+            responses:
+                201:
+                    description: "Success"
+                400:
+                    description: "Bad request"
+                500:
+                    description: "Internal Server Error"
+       
 
     "/databases":
         post:
